# Car-on-steriods

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
src/: camera.rs  car.rs  main.rs  world.rs
web/: blazingice_bevy.js  index.html
web/assets/: PUT_CAR_GLB_HERE.txt
web/pkg/: blazingice_bevy.js
